# pyevento

./: .gitignore  .mypy.ini  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
evento/: __init__.py  async_event.py  base.py  complex.py  decorators.py  event.py  signature.py
examples/: advanced.py  async.py  async_signature.py  basic.py  signature.py
tests/: async_event_test.py  decorators_test.py  event_test.py  helper.py  test_decorators.py  test_event.py
